fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: white;
   background-color: rgb(0, 0, 0);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 code {
